--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,32 @@ buildscript {
     ext.kotlin_version = "1.4.30"
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-alpha12'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id("io.gitlab.arturbosch.detekt").version("1.16.0")
+}
+
+repositories {
+    jcenter()
 }
 
 allprojects {
+    apply from: rootProject.file("ktlint.gradle")
+    apply from: rootProject.file("detekt.gradle")
+
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
-}
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
