Update CI/CD gradlew commands

--- a/.github/workflows/pull_request_check.yml
+++ b/.github/workflows/pull_request_check.yml
@@ -20,6 +20,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Makes gradlew executable
+        run: chmod +x ./gradlew
+
       # Runs a single command using the runners shell
       - name: Build Project
         run: ./gradlew assembleDebug
