--- a/.github/workflows/pull_request_check.yml
+++ b/.github/workflows/pull_request_check.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build Project
-        run: ./gradlew assembleDebug
+        run: ./gradlew build
 
       # Runs a set of commands using the runners shell
       - name: Run code format check with Ktlint
