--- a/libraries/database/build.gradle
+++ b/libraries/database/build.gradle
@@ -1,6 +1,9 @@
+import com.blityapps.blitynews.buildSrc.Dependencies
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -33,11 +36,21 @@ android {
 }
 
 dependencies {
+    implementation Dependencies.kotlin
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation project(":domain")
+
+    implementation Dependencies.AndroidX.core
+    implementation Dependencies.AndroidX.appCompat
+    implementation Dependencies.materialDesign
+
+    implementation Dependencies.AndroidX.Room.roomRuntime
+    kapt Dependencies.AndroidX.Room.roomCompiler
+    implementation Dependencies.AndroidX.Room.roomKtx
+
+    androidTestImplementation Dependencies.Coroutines.test
+    androidTestImplementation Dependencies.Test.junit4
+    androidTestImplementation Dependencies.Test.AndroidX.room
+    androidTestImplementation Dependencies.Test.junit4Extensions
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
 }
