--- a/libraries/database/build.gradle
+++ b/libraries/database/build.gradle
@@ -41,10 +41,13 @@ dependencies {
     implementation project(":domain")
 
     implementation Dependencies.AndroidX.core
-    implementation Dependencies.AndroidX.appCompat
-    implementation Dependencies.materialDesign
+
+    implementation Dependencies.Koin.core
+    implementation Dependencies.Koin.test
 
     implementation Dependencies.AndroidX.Room.roomRuntime
+    implementation 'androidx.room:room-runtime:2.2.6'
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
     kapt Dependencies.AndroidX.Room.roomCompiler
     implementation Dependencies.AndroidX.Room.roomKtx
 
@@ -52,5 +55,4 @@ dependencies {
     androidTestImplementation Dependencies.Test.junit4
     androidTestImplementation Dependencies.Test.AndroidX.room
     androidTestImplementation Dependencies.Test.junit4Extensions
-    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
 }
